tdf#100715 Slide transition sound: Remember remember last folder

Change-Id: I37bfb088a167464cdbd93a1f993a8161d12b379a