sd/source/ui/dlg/filedlg.cxx
@@ -38,6 +38,7 @@
 #include <sdresid.hxx>
 #include <strings.hrc>
 #include <vcl/graphicfilter.hxx>
+#include <officecfg/Office/Impress.hxx>
 
 // -----------      SdFileDialog_Imp        ---------------------------
 
@@ -235,6 +236,9 @@ SdOpenSoundFileDialog::SdOpenSoundFileDialog(weld::Window *pParent)
     aDescr = SdResId(STR_MIDI_FILE);
     mpImpl->AddFilter( aDescr, "*.mid" );
 #endif
+
+    // Restore last selected path
+    mpImpl->SetDisplayDirectory(officecfg::Office::Impress::Sound::Path::get());
 }
 
 SdOpenSoundFileDialog::~SdOpenSoundFileDialog()
@@ -248,6 +252,12 @@ ErrCode SdOpenSoundFileDialog::Execute()
 
 OUString SdOpenSoundFileDialog::GetPath() const
 {
+    // Save last selected path
+    std::shared_ptr<comphelper::ConfigurationChanges> batch(
+        comphelper::ConfigurationChanges::create());
+    officecfg::Office::Impress::Sound::Path::set(mpImpl->GetPath(), batch);
+    batch->commit();
+
     return mpImpl->GetPath();
 }
 
